add option get appointment/block with active chair only, update get list chair will get active chair only
